@@ -22,12 +22,11 @@ package password.pwm.config.profile;
 
 import com.novell.ldapchai.ChaiPasswordPolicy;
 import com.novell.ldapchai.ChaiPasswordRule;
-import com.novell.ldapchai.util.StringHelper;
 import lombok.Builder;
 import lombok.Value;
-import password.pwm.AppProperty;
 import password.pwm.PwmConstants;
 import password.pwm.bean.DomainID;
+import password.pwm.bean.ProfileID;
 import password.pwm.config.DomainConfig;
 import password.pwm.config.PwmSetting;
 import password.pwm.config.StoredSettingReader;
@@ -37,10 +36,9 @@ import password.pwm.health.HealthMessage;
 import password.pwm.health.HealthRecord;
 import password.pwm.util.i18n.LocaleHelper;
 import password.pwm.util.java.CollectionUtil;
-import password.pwm.util.java.JavaHelper;
-import password.pwm.util.java.JsonUtil;
+import password.pwm.util.java.EnumUtil;
 import password.pwm.util.java.LazySupplier;
-import password.pwm.util.java.StringUtil;
+import password.pwm.util.json.JsonFactory;
 import password.pwm.util.logging.PwmLogger;
 import password.pwm.util.password.PasswordRuleReaderHelper;
 
@@ -48,18 +46,16 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.TreeMap;
-import java.util.TreeSet;
 import java.util.function.Supplier;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 
 /**
@@ -73,15 +69,13 @@ public class PwmPasswordPolicy implements Profile, Serializable
 
     private static final PwmPasswordPolicy DEFAULT_POLICY = makeDefaultPolicy();
 
-    private final transient Supplier<List<HealthRecord>> healthChecker = new LazySupplier<>( () -> doHealthChecks( this ) );
+    private final transient Supplier<List<HealthRecord>> healthChecker = LazySupplier.create( () -> doHealthChecks( this ) );
     private final transient ChaiPasswordPolicy chaiPasswordPolicy;
 
-    private final DomainID domainID;
     private final Map<String, String> policyMap;
     private final PolicyMetaData policyMetaData;
 
     private PwmPasswordPolicy(
-            final DomainID domainID,
             final Map<String, String> policyMap,
             final ChaiPasswordPolicy chaiPasswordPolicy,
             final PolicyMetaData policyMetaData
@@ -104,10 +98,9 @@ public class PwmPasswordPolicy implements Profile, Serializable
             }
         }
 
-        this.domainID = domainID;
         this.chaiPasswordPolicy = chaiPasswordPolicy;
         this.policyMetaData = policyMetaData == null ? PolicyMetaData.builder().build() : policyMetaData;
-        this.policyMap = Map.copyOf( effectivePolicyMap );
+        this.policyMap = Collections.unmodifiableMap( new TreeMap<>( effectivePolicyMap ) );
     }
 
     public static PwmPasswordPolicy createPwmPasswordPolicy(
@@ -122,22 +115,22 @@ public class PwmPasswordPolicy implements Profile, Serializable
             final ChaiPasswordPolicy chaiPasswordPolicy
     )
     {
-        return new PwmPasswordPolicy( domainID, policyMap, chaiPasswordPolicy, null );
+        final PolicyMetaData policyMetaData = PolicyMetaData.builder().domainID( domainID ).build();
+        return new PwmPasswordPolicy( policyMap, chaiPasswordPolicy, policyMetaData );
     }
 
     public static PwmPasswordPolicy createPwmPasswordPolicy(
-            final DomainID domainID,
             final Map<String, String> policyMap,
             final ChaiPasswordPolicy chaiPasswordPolicy,
             final PolicyMetaData policyMetaData
     )
     {
-        return new PwmPasswordPolicy( domainID, policyMap, chaiPasswordPolicy, policyMetaData );
+        return new PwmPasswordPolicy( policyMap, chaiPasswordPolicy, policyMetaData );
     }
 
     public static PwmPasswordPolicy createPwmPasswordPolicy(
             final DomainConfig domainConfig,
-            final String profileID
+            final ProfileID profileID
     )
     {
         final StoredSettingReader settingReader = new StoredSettingReader( domainConfig.getStoredConfiguration(), profileID,  domainConfig.getDomainID() );
@@ -146,53 +139,10 @@ public class PwmPasswordPolicy implements Profile, Serializable
         {
             if ( rule.getPwmSetting() != null || rule.getAppProperty() != null )
             {
-                final String value;
-                final PwmSetting pwmSetting = rule.getPwmSetting();
-                switch ( rule )
-                {
-                    case DisallowedAttributes:
-                    case DisallowedValues:
-                    case CharGroupsValues:
-                        value = StringUtil.collectionToString(
-                                settingReader.readSettingAsStringArray( pwmSetting ), "\n" );
-                        break;
-                    case RegExMatch:
-                    case RegExNoMatch:
-                        value = StringUtil.collectionToString(
-                                settingReader.readSettingAsStringArray( pwmSetting ), ";;;" );
-                        break;
-                    case ChangeMessage:
-                        {
-                            final String settingValue = settingReader.readSettingAsLocalizedString( pwmSetting, PwmConstants.DEFAULT_LOCALE );
-                            value = settingValue == null ? "" : settingValue;
-                        }
-                        break;
-                    case ADComplexityLevel:
-                        value = settingReader.readSettingAsEnum( pwmSetting, ADPolicyComplexity.class ).toString();
-                        break;
-                    case AllowMacroInRegExSetting:
-                        value = domainConfig.readAppProperty( AppProperty.ALLOW_MACRO_IN_REGEX_SETTING );
-                        break;
-                    default:
-                        switch ( rule.getRuleType() )
-                        {
-                            case MAX:
-                            case MIN:
-                            case NUMERIC:
-                                value = String.valueOf( settingReader.readSettingAsLong( pwmSetting ) );
-                                break;
-
-                            case BOOLEAN:
-                                value = String.valueOf( settingReader.readSettingAsBoolean( pwmSetting ) );
-                                break;
-
-                            default:
-                                value = settingReader.readSettingAsString( pwmSetting );
-                                break;
-                        }
-                        break;
-                }
-                passwordPolicySettings.put( rule.getKey(), value );
+                final PwmPasswordRuleFunctions.NewRuleValueFunction generator
+                        = PwmPasswordRuleFunctions.NEW_RULE_VALUE_FUNCTION.getOrDefault( rule, PwmPasswordRuleFunctions.DEFAULT_NEW_RULE_VALUE_FUNCTION );
+                generator.apply( domainConfig, settingReader, rule ).ifPresent(
+                        value -> passwordPolicySettings.put( rule.getKey(), value ) );
             }
         }
 
@@ -204,15 +154,20 @@ public class PwmPasswordPolicy implements Profile, Serializable
         }
 
         // set pwm-specific values
-        final PwmPasswordPolicy.PolicyMetaData policyMetaData = PwmPasswordPolicy.PolicyMetaData.builder()
+        final PwmPasswordPolicy.PolicyMetaData policyMetaData = PolicyMetaData.builder()
                 .profileID( profileID )
+                .domainID( domainConfig.getDomainID() )
                 .userPermissions( settingReader.readSettingAsUserPermission( PwmSetting.PASSWORD_POLICY_QUERY_MATCH ) )
                 .ruleText( readLocalizedSetting( PwmSetting.PASSWORD_POLICY_RULE_TEXT, domainConfig, settingReader ) )
                 .changePasswordText( readLocalizedSetting( PwmSetting.PASSWORD_POLICY_CHANGE_MESSAGE, domainConfig, settingReader ) )
                 .build();
 
-        return PwmPasswordPolicy.createPwmPasswordPolicy( domainConfig.getDomainID(), passwordPolicySettings, null, policyMetaData );
+        return PwmPasswordPolicy.createPwmPasswordPolicy( passwordPolicySettings, null, policyMetaData );
     }
+
+
+
+
 
     private static Map<Locale, String> readLocalizedSetting(
             final PwmSetting pwmSetting,
@@ -236,7 +191,7 @@ public class PwmPasswordPolicy implements Profile, Serializable
     }
 
     @Override
-    public String getIdentifier( )
+    public ProfileID getId( )
     {
         return policyMetaData.getProfileID();
     }
@@ -244,12 +199,12 @@ public class PwmPasswordPolicy implements Profile, Serializable
     @Override
     public String getDisplayName( final Locale locale )
     {
-        return getIdentifier();
+        return getId() == null ? "[no-profile]" : getId().stringValue();
     }
 
     public DomainID getDomainID()
     {
-        return domainID;
+        return policyMetaData == null ? null : policyMetaData.getDomainID();
     }
 
     private static PwmPasswordPolicy makeDefaultPolicy()
@@ -257,11 +212,11 @@ public class PwmPasswordPolicy implements Profile, Serializable
         PwmPasswordPolicy newDefaultPolicy = null;
         try
         {
-            final Map<String, String> defaultPolicyMap = new HashMap<>();
-            for ( final PwmPasswordRule rule : PwmPasswordRule.values() )
-            {
-                defaultPolicyMap.put( rule.getKey(), rule.getDefaultValue() );
-            }
+            final Map<String, String> defaultPolicyMap = EnumUtil.enumStream( PwmPasswordRule.class )
+                    .collect( Collectors.toUnmodifiableMap(
+                            PwmPasswordRule::getKey,
+                            PwmPasswordRule::getDefaultValue ) );
+
             newDefaultPolicy = createPwmPasswordPolicy( DomainID.systemId(), defaultPolicyMap, null );
         }
         catch ( final Throwable t )
@@ -279,7 +234,7 @@ public class PwmPasswordPolicy implements Profile, Serializable
     @Override
     public String toString( )
     {
-        return "PwmPasswordPolicy" + ": " + JsonUtil.serialize( this );
+        return "PwmPasswordPolicy" + ": " + JsonFactory.get().serialize( this );
     }
 
     public ChaiPasswordPolicy getChaiPasswordPolicy( )
@@ -331,95 +286,29 @@ public class PwmPasswordPolicy implements Profile, Serializable
             return this;
         }
 
-        final Map<String, String> newPasswordPolicies = new HashMap<>();
-
-        for ( final PwmPasswordRule rule : PwmPasswordRule.values() )
-        {
-            final String ruleKey = rule.getKey();
-            if ( this.policyMap.containsKey( ruleKey ) || otherPolicy.policyMap.containsKey( ruleKey ) )
-            {
-
-                switch ( rule )
-                {
-                    case DisallowedValues:
-                    case DisallowedAttributes:
-                    case RegExMatch:
-                    case RegExNoMatch:
-                    case CharGroupsValues:
-                        final String separator = ( rule == PwmPasswordRule.RegExMatch || rule == PwmPasswordRule.RegExNoMatch ) ? ";;;" : "\n";
-                        final Set<String> combinedSet = new HashSet<>();
-                        combinedSet.addAll( StringHelper.tokenizeString( this.policyMap.get( rule.getKey() ), separator ) );
-                        combinedSet.addAll( StringHelper.tokenizeString( otherPolicy.policyMap.get( rule.getKey() ), separator ) );
-                        newPasswordPolicies.put( ruleKey, StringUtil.collectionToString( combinedSet, separator ) );
-                        break;
-
-                    case ChangeMessage:
-                        final String thisChangeMessage = getValue( PwmPasswordRule.ChangeMessage );
-                        if ( StringUtil.isEmpty( thisChangeMessage ) )
-                        {
-                            newPasswordPolicies.put( ruleKey, otherPolicy.getValue( PwmPasswordRule.ChangeMessage ) );
-                        }
-                        else
-                        {
-                            newPasswordPolicies.put( ruleKey, getValue( PwmPasswordRule.ChangeMessage ) );
-                        }
-                        break;
-
-                    case ExpirationInterval:
-                        final String expirationIntervalLocalValue = StringUtil.defaultString( policyMap.get( ruleKey ), rule.getDefaultValue() );
-                        final String expirationIntervalOtherValue = StringUtil.defaultString( otherPolicy.policyMap.get( ruleKey ), rule.getDefaultValue() );
-                        newPasswordPolicies.put( ruleKey, mergeMin( expirationIntervalLocalValue, expirationIntervalOtherValue ) );
-                        break;
-
-                    case MinimumLifetime:
-                        final String minimumLifetimeLocalValue = StringUtil.defaultString( policyMap.get( ruleKey ), rule.getDefaultValue() );
-                        final String minimumLifetimeOtherValue = StringUtil.defaultString( otherPolicy.policyMap.get( ruleKey ), rule.getDefaultValue() );
-                        newPasswordPolicies.put( ruleKey, mergeMin( minimumLifetimeLocalValue, minimumLifetimeOtherValue ) );
-                        break;
-
-                    case ADComplexityLevel:
-                        newPasswordPolicies.put( ruleKey, mergeADComplexityLevel( policyMap.get( ruleKey ), otherPolicy.policyMap.get( ruleKey ) ) );
-                        break;
-
-                    default:
-                        final String localValueString = StringUtil.defaultString( policyMap.get( ruleKey ), rule.getDefaultValue() );
-                        final String otherValueString = StringUtil.defaultString( otherPolicy.policyMap.get( ruleKey ), rule.getDefaultValue() );
-
-                        switch ( rule.getRuleType() )
-                        {
-                            case MIN:
-                                newPasswordPolicies.put( ruleKey, mergeMin( localValueString, otherValueString ) );
-                                break;
-
-                            case MAX:
-                                newPasswordPolicies.put( ruleKey, mergeMax( localValueString, otherValueString ) );
-                                break;
-
-                            case BOOLEAN:
-                                final boolean localValue = StringHelper.convertStrToBoolean( localValueString );
-                                final boolean otherValue = StringHelper.convertStrToBoolean( otherValueString );
-
-                                if ( rule.isPositiveBooleanMerge() )
-                                {
-                                    newPasswordPolicies.put( ruleKey, String.valueOf( localValue || otherValue ) );
-                                }
-                                else
-                                {
-                                    newPasswordPolicies.put( ruleKey, String.valueOf( localValue && otherValue ) );
-                                }
-                                break;
-
-                            default:
-                                //continue processing
-                                break;
-                        }
-                }
-            }
-        }
+        final Map<String, String> newPasswordPolicies = EnumUtil.enumStream( PwmPasswordRule.class )
+                .map( rule -> Map.entry( rule, mergeValue( otherPolicy, rule ) ) )
+                .filter( entry -> entry.getValue().isPresent() )
+                .collect( Collectors.toUnmodifiableMap( entry -> entry.getKey().getKey(), entry -> entry.getValue().get() ) );
 
         final ChaiPasswordPolicy backingPolicy = this.chaiPasswordPolicy != null ? chaiPasswordPolicy : otherPolicy.chaiPasswordPolicy;
         final PolicyMetaData metaData = getPolicyMetaData().merge( otherPolicy.getPolicyMetaData() );
-        return new PwmPasswordPolicy( domainID, newPasswordPolicies, backingPolicy, metaData );
+        return new PwmPasswordPolicy( newPasswordPolicies, backingPolicy, metaData );
+    }
+
+    private Optional<String> mergeValue( final PwmPasswordPolicy otherPolicy, final PwmPasswordRule rule )
+    {
+        final String ruleKey = rule.getKey();
+        final String thisValue = this.policyMap.get( ruleKey );
+        final String otherValue = otherPolicy.policyMap.get( ruleKey );
+
+        if ( thisValue != null || otherValue != null )
+        {
+            final PwmPasswordRuleFunctions.RuleMergeFunction ruleMergeFunction
+                    = PwmPasswordRuleFunctions.RULE_MERGE_FUNCTIONS.getOrDefault( rule, PwmPasswordRuleFunctions.DEFAULT_RULE_MERGE_SINGLETON );
+            return ruleMergeFunction.apply( rule, thisValue, otherValue );
+        }
+        return Optional.empty();
     }
 
     private PolicyMetaData getPolicyMetaData()
@@ -427,48 +316,9 @@ public class PwmPasswordPolicy implements Profile, Serializable
         return policyMetaData;
     }
 
-    private static String mergeADComplexityLevel( final String value1, final String value2 )
-    {
-        final TreeSet<ADPolicyComplexity> seenValues = new TreeSet<>();
-        seenValues.add( JavaHelper.readEnumFromString( ADPolicyComplexity.class, ADPolicyComplexity.NONE, value1 ) );
-        seenValues.add( JavaHelper.readEnumFromString( ADPolicyComplexity.class, ADPolicyComplexity.NONE, value2 ) );
-        return seenValues.last().name();
-    }
-
-    protected static String mergeMin( final String value1, final String value2 )
-    {
-        final int iValue1 = StringHelper.convertStrToInt( value1, 0 );
-        final int iValue2 = StringHelper.convertStrToInt( value2, 0 );
-
-        // take the largest value
-        return iValue1 > iValue2 ? value1 : value2;
-    }
-
-    protected static String mergeMax( final String value1, final String value2 )
-    {
-        final int iValue1 = StringHelper.convertStrToInt( value1, 0 );
-        final int iValue2 = StringHelper.convertStrToInt( value2, 0 );
-
-        final String returnValue;
-
-        // if one of the values is zero, take the other one.
-        if ( iValue1 == 0 || iValue2 == 0 )
-        {
-            returnValue = iValue1 > iValue2 ? value1 : value2;
-
-            // else take the smaller value
-        }
-        else
-        {
-            returnValue = iValue1 < iValue2 ? value1 : value2;
-        }
-
-        return returnValue;
-    }
-
     public Map<String, String> getPolicyMap( )
     {
-        return Collections.unmodifiableMap( policyMap );
+        return policyMap;
     }
 
     @Override
@@ -520,7 +370,7 @@ public class PwmPasswordPolicy implements Profile, Serializable
                         + maxRule.getLabel( locale, null ) + " (" + maxValue + ")";
                 returnList.add( HealthRecord.forMessage(
                         pwmPasswordPolicy.getDomainID(),
-                        HealthMessage.Config_PasswordPolicyProblem, policyMetaData.getProfileID(), detailMsg ) );
+                        HealthMessage.Config_PasswordPolicyProblem, policyMetaData.getProfileID().stringValue(), detailMsg ) );
             }
         }
 
@@ -536,7 +386,7 @@ public class PwmPasswordPolicy implements Profile, Serializable
                         + PwmPasswordRule.CharGroupsMinMatch.getLabel( locale, null ) + " (" + maxValue + ")";
                 returnList.add( HealthRecord.forMessage(
                         pwmPasswordPolicy.getDomainID(),
-                        HealthMessage.Config_PasswordPolicyProblem, policyMetaData.getProfileID(), detailMsg ) );
+                        HealthMessage.Config_PasswordPolicyProblem, policyMetaData.getProfileID().stringValue(), detailMsg ) );
             }
         }
 
@@ -549,7 +399,9 @@ public class PwmPasswordPolicy implements Profile, Serializable
     @Builder
     public static class PolicyMetaData implements Serializable
     {
-        private final String profileID;
+        private final DomainID domainID;
+
+        private final ProfileID profileID;
 
         @Builder.Default
         private final List<UserPermission> userPermissions = Collections.emptyList();
@@ -565,7 +417,8 @@ public class PwmPasswordPolicy implements Profile, Serializable
                     .ruleText( CollectionUtil.isEmpty( ruleText ) ? otherPolicy.ruleText : ruleText )
                     .changePasswordText( CollectionUtil.isEmpty( changePasswordText ) ? otherPolicy.changePasswordText : changePasswordText )
                     .userPermissions( CollectionUtil.isEmpty( userPermissions ) ? otherPolicy.userPermissions : userPermissions )
-                    .profileID( StringUtil.isEmpty( profileID ) ? otherPolicy.profileID : profileID )
+                    .profileID( profileID == null ? otherPolicy.profileID : profileID )
+                    .domainID( domainID == null ? otherPolicy.domainID : domainID )
                     .build();
         }
     }
