@@ -20,18 +20,19 @@
 
 package password.pwm.config.value;
 
-import password.pwm.PwmConstants;
+import org.jrivard.xmlchai.XmlChai;
+import org.jrivard.xmlchai.XmlElement;
 import password.pwm.bean.DomainID;
+import password.pwm.bean.ProfileID;
 import password.pwm.config.PwmSetting;
 import password.pwm.config.PwmSettingFlag;
 import password.pwm.config.PwmSettingSyntax;
 import password.pwm.config.stored.StoredConfigXmlConstants;
 import password.pwm.config.stored.XmlOutputProcessData;
 import password.pwm.config.value.data.FormConfiguration;
-import password.pwm.util.java.JsonUtil;
+import password.pwm.util.java.CollectionUtil;
 import password.pwm.util.java.StringUtil;
-import password.pwm.util.java.XmlElement;
-import password.pwm.util.java.XmlFactory;
+import password.pwm.util.json.JsonFactory;
 import password.pwm.util.secure.PwmSecurityKey;
 
 import java.util.Collections;
@@ -59,9 +60,9 @@ public class StringValue extends AbstractValue implements StoredValue
         return new StoredValueFactory()
         {
             @Override
-            public StringValue fromJson( final String input )
+            public StringValue fromJson( final PwmSetting pwmSetting, final String input )
             {
-                final String newValue = JsonUtil.deserialize( input, String.class );
+                final String newValue = JsonFactory.get().deserialize( input, String.class );
                 return new StringValue( newValue );
             }
 
@@ -78,8 +79,8 @@ public class StringValue extends AbstractValue implements StoredValue
     @Override
     public List<XmlElement> toXmlValues( final String valueElementName, final XmlOutputProcessData xmlOutputProcessData )
     {
-        final XmlElement valueElement = XmlFactory.getFactory().newElement( valueElementName );
-        valueElement.addText( value );
+        final XmlElement valueElement = XmlChai.getFactory().newElement( valueElementName );
+        valueElement.setText( value );
         return Collections.singletonList( valueElement );
     }
 
@@ -122,15 +123,19 @@ public class StringValue extends AbstractValue implements StoredValue
 
         if ( StringUtil.notEmpty( value ) && pwmSetting.getSyntax() == PwmSettingSyntax.DOMAIN )
         {
-            final String lCaseValue = value.toLowerCase( PwmConstants.DEFAULT_LOCALE );
-            final List<String> reservedWords = DomainID.DOMAIN_RESERVED_WORDS;
-            final boolean contains = reservedWords.stream()
-                    .map( String::toLowerCase )
-                    .anyMatch( lCaseValue::contains );
-            if ( contains )
+            final List<String> errorStrings = DomainID.validateUserValue( value );
+            if ( !CollectionUtil.isEmpty( errorStrings ) )
             {
-                return Collections.singletonList( "Domain ID is reserved word: '" + value + "'" );
+                return List.copyOf( errorStrings );
+            }
+        }
 
+        if ( StringUtil.notEmpty( value ) && pwmSetting.getSyntax() == PwmSettingSyntax.PROFILE )
+        {
+            final List<String> errorStrings = ProfileID.validateUserValue( value );
+            if ( !CollectionUtil.isEmpty( errorStrings ) )
+            {
+                return List.copyOf( errorStrings );
             }
         }
 
