@@ -20,18 +20,17 @@
 
 package password.pwm.config.value;
 
-import com.google.gson.reflect.TypeToken;
+import org.jrivard.xmlchai.XmlChai;
+import org.jrivard.xmlchai.XmlElement;
 import password.pwm.config.PwmSetting;
 import password.pwm.config.stored.StoredConfigXmlConstants;
 import password.pwm.config.stored.XmlOutputProcessData;
 import password.pwm.config.value.data.UserPermission;
-import password.pwm.error.PwmOperationalException;
 import password.pwm.error.PwmUnrecoverableException;
 import password.pwm.ldap.permission.UserPermissionType;
 import password.pwm.ldap.permission.UserPermissionUtility;
-import password.pwm.util.java.JsonUtil;
-import password.pwm.util.java.XmlElement;
-import password.pwm.util.java.XmlFactory;
+import password.pwm.util.java.CollectionUtil;
+import password.pwm.util.json.JsonFactory;
 import password.pwm.util.secure.PwmSecurityKey;
 
 import java.util.ArrayList;
@@ -54,17 +53,7 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
 
     private List<UserPermission> sanitizeList( final List<UserPermission> permissions )
     {
-        final List<UserPermission> tempList = new ArrayList<>();
-        if ( permissions != null )
-        {
-            tempList.addAll( permissions );
-        }
-
-        while ( tempList.contains( null ) )
-        {
-            tempList.remove( null );
-        }
-
+        final List<UserPermission> tempList = new ArrayList<>( CollectionUtil.stripNulls( permissions ) );
         Collections.sort( tempList );
         return Collections.unmodifiableList( tempList );
     }
@@ -74,7 +63,7 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
         return new StoredValueFactory()
         {
             @Override
-            public UserPermissionValue fromJson( final String input )
+            public UserPermissionValue fromJson( final PwmSetting pwmSetting, final String input )
             {
                 if ( input == null )
                 {
@@ -82,9 +71,7 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
                 }
                 else
                 {
-                    List<UserPermission> srcList = JsonUtil.deserialize( input, new TypeToken<List<UserPermission>>()
-                    {
-                    } );
+                    List<UserPermission> srcList = JsonFactory.get().deserializeList( input, UserPermission.class );
                     srcList = srcList == null ? Collections.emptyList() : srcList;
                     return new UserPermissionValue( Collections.unmodifiableList( srcList ) );
                 }
@@ -92,9 +79,8 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
 
             @Override
             public UserPermissionValue fromXmlElement( final PwmSetting pwmSetting, final XmlElement settingElement, final PwmSecurityKey key )
-                    throws PwmOperationalException
             {
-                final boolean newType = "2".equals( settingElement.getAttributeValue( StoredConfigXmlConstants.XML_ATTRIBUTE_SYNTAX_VERSION )
+                final boolean newType = "2".equals( settingElement.getAttribute( StoredConfigXmlConstants.XML_ATTRIBUTE_SYNTAX_VERSION )
                                 .orElse( "" ) );
 
                 final List<XmlElement> valueElements = settingElement.getChildren( "value" );
@@ -106,7 +92,7 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
                     {
                         if ( newType )
                         {
-                            final UserPermission userPermission = JsonUtil.deserialize( value.get(), UserPermission.class );
+                            final UserPermission userPermission = JsonFactory.get().deserialize( value.get(), UserPermission.class );
                             values.add( userPermission );
                         }
                         else
@@ -128,11 +114,11 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
     @Override
     public List<XmlElement> toXmlValues( final String valueElementName, final XmlOutputProcessData xmlOutputProcessData )
     {
-        final List<XmlElement> returnList = new ArrayList<>();
+        final List<XmlElement> returnList = new ArrayList<>( values.size() );
         for ( final UserPermission value : values )
         {
-            final XmlElement valueElement = XmlFactory.getFactory().newElement( valueElementName );
-            valueElement.addText( JsonUtil.serialize( value ) );
+            final XmlElement valueElement = XmlChai.getFactory().newElement( valueElementName );
+            valueElement.setText( JsonFactory.get().serialize( value ) );
             returnList.add( valueElement );
         }
         return returnList;
@@ -141,13 +127,13 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
     @Override
     public List<UserPermission> toNativeObject( )
     {
-        return Collections.unmodifiableList( values );
+        return List.copyOf( values );
     }
 
     @Override
     public List<String> validateValue( final PwmSetting pwmSetting )
     {
-        final List<String> returnObj = new ArrayList<>();
+        final List<String> returnObj = new ArrayList<>( values.size() );
         for ( final UserPermission userPermission : values )
         {
             try
@@ -186,7 +172,7 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
                 sb.append( userPermission.debugString() );
                 if ( iterator.hasNext() )
                 {
-                    sb.append( "\n" );
+                    sb.append( '\n' );
                 }
             }
             return sb.toString();
